Fixed issue scroll not showing elements in home

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -4,9 +4,9 @@
 }
 
 ion-footer{
-  max-height: 50%;
   .bike-list-container{
     overflow-y: auto;
+    max-height: 246px;
   }
   
   .nearby-bikes{
